--- a/over/app/src/main/res/layout/login_lay.xml
+++ b/over/app/src/main/res/layout/login_lay.xml
@@ -3,7 +3,8 @@
 
     android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#ccd1d1">
 
 
 
@@ -12,8 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:weightSum="1"
-        android:background="#a40ec5f2"
+        android:background="#e1e5e6"
         android:orientation="vertical">
 
 
@@ -42,7 +45,7 @@
                 android:id="@+id/editText2"
 
                 android:background="#c6eaeb"
-    android:layout_marginTop="10dp"
+                android:layout_marginTop="10dp"
                 android:hint="password"
                 android:layout_below="@+id/editText"
                 android:ellipsize="start"
