--- a/over/app/src/main/res/layout/content_launcher.xml
+++ b/over/app/src/main/res/layout/content_launcher.xml
@@ -24,7 +24,7 @@
 
             <TextView
                 android:id="@+id/label_categories"
-                android:textColor="#80273e"
+                android:textColor="#0e6655"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
