--- a/over/app/src/main/res/layout/fetch_category.xml
+++ b/over/app/src/main/res/layout/fetch_category.xml
@@ -8,9 +8,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_gravity="left"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:id="@+id/linearMain"
     android:background="#fbdedfdf"
     android:paddingLeft="@dimen/activity_horizontal_margin"
