--- a/over/app/src/main/res/layout/option_lay.xml
+++ b/over/app/src/main/res/layout/option_lay.xml
@@ -18,7 +18,9 @@
         android:layout_gravity="center_horizontal"
         android:onClick="onClick"
         android:text="New Product"
-
+        android:textAllCaps="true"
+        android:textSize="20dp"
+        android:textColor="#0e6655"
         android:background="#fbdedfdf"/>
 
     <Button
@@ -29,6 +31,9 @@
         android:layout_gravity="center_horizontal"
         android:onClick="onClick"
         android:text="Existing Product Search"
+        android:textAllCaps="true"
+        android:textSize="20dp"
+        android:textColor="#0e6655"
         android:background="#fbdedfdf"/>
 
 </LinearLayout>
