Form display and layout completed

--- a/over/app/src/main/res/layout/login_lay.xml
+++ b/over/app/src/main/res/layout/login_lay.xml
@@ -43,7 +43,7 @@
                 android:layout_width="200dp"
                 android:layout_height="50dp"
                 android:id="@+id/editText2"
-
+               android:inputType="textPassword"
 
                 android:layout_marginTop="10dp"
                 android:hint="password"
@@ -52,7 +52,7 @@
 
                 android:gravity="center_horizontal"
 
-                android:inputType="textCapWords|textPersonName"
+
                 android:singleLine="true"
                 android:layout_gravity="center"
                 android:layout_row="6"
@@ -63,8 +63,8 @@
 
         <Button
             android:id="@+id/Login"
-            android:layout_width="160dp"
-            android:layout_height="40dp"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
             android:text="login"
             android:onClick="onClick"
 
@@ -85,6 +85,7 @@
             android:layout_below="@+id/Login"
             android:layout_marginTop="10dp"
           android:layout_centerHorizontal="true"></ImageView>
+
 
 
 
