--- a/over/app/src/main/res/layout/initial_summary.xml
+++ b/over/app/src/main/res/layout/initial_summary.xml
@@ -7,7 +7,7 @@
 
     <TableRow
         android:id="@+id/tableRow1"
-        android:layout_width="0dp"
+        android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:padding="15dp"
