--- a/over/app/src/main/res/layout/qc_report.xml
+++ b/over/app/src/main/res/layout/qc_report.xml
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:fillViewport="false">
+
+
+<!--<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:fillViewport="false">-->
+
+
+    <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/layout"
+        android:layout_height="match_parent"
+        android:scrollbars="horizontal|vertical"
+        android:layout_width="match_parent"
+        android:layout_marginTop="5dip"
+        android:scrollbarStyle="outsideInset"
+        android:fillViewport="true">
+
+
+
+
 
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:inputType="textMultiLine"
     android:id="@+id/qc_report"
+    android:shrinkColumns="0"
+    android:stretchColumns="1"
     >
 
     <TableRow
@@ -18,18 +37,19 @@
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/Field"
-            android:text=""/>
+            android:text=""
+            android:layout_weight="1"
 
+            />
 
         <TextView
             android:id="@+id/Value"
-            android:text=""/>
+            android:text=""
+            android:layout_weight="1"
+           />
         <TextView />
 
-
-
     </TableRow>
-
 
     <Button
         android:id="@+id/OKButton"
@@ -41,8 +61,5 @@
 
         />
 
-
-
 </TableLayout>
-
     </ScrollView>
